<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/firstNameText"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:ems="10"
                android:hint="@string/first"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/lastNameText"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/last"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="@+id/wishItem"
                app:layout_constraintTop_toBottomOf="@+id/firstNameText" />

            <EditText
                android:id="@+id/textLink"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/link"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wishItem" />

            <EditText
                android:id="@+id/wishItem"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/wish"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintStart_toStartOf="@+id/textLink"
                app:layout_constraintTop_toBottomOf="@+id/lastNameText" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="159dp"
                android:layout_height="34dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="25dp"
                android:text="@string/des"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.448"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="313dp"
                android:layout_height="32dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="59dp"
                    android:layout_height="wrap_content"
                    android:text="@string/desOne" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/desTwo" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="66dp"
                    android:layout_height="wrap_content"
                    android:text="@string/desThree" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="61dp"
                    android:layout_height="wrap_content"
                    android:text="@string/desFour" />

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="63dp"
                    android:layout_height="wrap_content"
                    android:text="@string/desFive" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView"
                android:layout_width="131dp"
                android:layout_height="25dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="31dp"
                android:text="@string/price"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/spinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textLink"
                app:layout_constraintVertical_bias="0.084" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                android:entries="@array/priceRange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textLink" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="25dp"
                android:onClick="addWish"
                android:text="@string/makeWish"
                android:textColor="@color/colorPrimary"
                android:backgroundTint="@color/colorAccent"
                android:theme="@style/christmasTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.458"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>